--- a/styles.css
+++ b/styles.css
@@ -168,7 +168,7 @@
       text-align: center;
       margin: auto;
    }
-   .contactus {
+   .contactme {
       width: 33.33%;
       /* border: 2px solid red; */
       text-align: center;
