--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,19 @@
     height: 100%;
     object-fit: cover;
  }
+ form{
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+   font-size: 15px;
+   font-family: Arial, Helvetica, sans-serif;
+ }
+ #ingrResults{
+   margin-left: auto;
+   margin-right: auto;
+   text-align: center;
+   margin-bottom: 50px;
+ }
 
  #container{
     display: flex;
