--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,16 @@ form {
   margin-right: auto;
   text-align: center;
   margin-bottom: 50px;
-}
+  border-radius: 10px;
+  }
+  #ingrInput{
+   height: 50px;
+   width: 250px
+   }
+
+   
+
+
 
 #container {
   display: flex;
